--- a/bbq/Web.config
+++ b/bbq/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -7,23 +7,23 @@
   <configSections>
     <sectionGroup name="businessObjects">
       <sectionGroup name="crystalReports">
-        <section name="rptBuildProvider" type="CrystalDecisions.Shared.RptBuildProviderHandler, CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, Custom=null"/>
-        <section name="crystalReportViewer" type="System.Configuration.NameValueSectionHandler"/>
+        <section name="rptBuildProvider" type="CrystalDecisions.Shared.RptBuildProviderHandler, CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, Custom=null" />
+        <section name="crystalReportViewer" type="System.Configuration.NameValueSectionHandler" />
       </sectionGroup>
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="CrystalImageCleaner-AutoStart" value="true"/>
-    <add key="CrystalImageCleaner-Sleep" value="60000"/>
-    <add key="CrystalImageCleaner-Age" value="120000"/>
+    <add key="CrystalImageCleaner-AutoStart" value="true" />
+    <add key="CrystalImageCleaner-Sleep" value="60000" />
+    <add key="CrystalImageCleaner-Age" value="120000" />
   </appSettings>
   <businessObjects>
     <crystalReports>
       <rptBuildProvider>
-        <add embedRptInResource="true"/>
+        <add embedRptInResource="true" />
       </rptBuildProvider>
       <crystalReportViewer>
-        <add key="ResourceUri" value="/crystalreportviewers13"/>
+        <add key="ResourceUri" value="/crystalreportviewers13" />
       </crystalReportViewer>
     </crystalReports>
   </businessObjects>
@@ -36,50 +36,50 @@
       </system.Web>
   -->
   <system.web>
-    <sessionState mode="InProc"/>
-    <pages maintainScrollPositionOnPostBack="true" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <sessionState mode="InProc" />
+    <pages maintainScrollPositionOnPostBack="true" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
     <httpHandlers>
-      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
-      <add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
+      <add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     </httpHandlers>
     <compilation debug="true" targetFramework="4.8">
       <assemblies>
-        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
-        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
-        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
       <buildProviders>
-        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
       </buildProviders>
     </compilation>
-    <httpRuntime/>
+    <httpRuntime />
   </system.web>
   <connectionStrings>
-    <add name="conn" connectionString="Data Source=sql5111.site4now.net;Initial Catalog=db_a8aced_hrisesoft;User Id=db_a8aced_hrisesoft_admin;Password=!Mahesh@2021;" providerName="System.Data.SqlClient"/>
-    <add name="conn_clock" connectionString="Data Source=sql5110.site4now.net;Initial Catalog=db_a8aced_lessonsatt;User Id=db_a8aced_lessonsatt_admin;Password=!Mahesh@2021;" providerName="System.Data.SqlClient"/>
-    <add name="conn_job" connectionString="Data Source=sql5112.site4now.net;Initial Catalog=db_a8aced_harshaatt;User Id=db_a8aced_harshaatt_admin;Password=!Mahesh@2021;" providerName="System.Data.SqlClient"/>
-    <add name="conn_temp" connectionString="Data Source=localhost\SQLExpress;Initial Catalog=attendanceB;User Id=admin;Password=admin;" providerName="System.Data.SqlClient"/>
+    <add name="conn" connectionString="Data Source=sql5111.site4now.net;Initial Catalog=db_a8aced_hrisesoft;User Id=db_a8aced_hrisesoft_admin;Password=!Mahesh@2021;" providerName="System.Data.SqlClient" />
+    <add name="conn_clock" connectionString="Data Source=sql5110.site4now.net;Initial Catalog=db_a8aced_lessonsatt;User Id=db_a8aced_lessonsatt_admin;Password=!Mahesh@2021;" providerName="System.Data.SqlClient" />
+    <add name="conn_job" connectionString="Data Source=sql5112.site4now.net;Initial Catalog=db_a8aced_harshaatt;User Id=db_a8aced_harshaatt_admin;Password=!Mahesh@2021;" providerName="System.Data.SqlClient" />
+    <add name="conn_temp" connectionString="Data Source=localhost\SQLExpress;Initial Catalog=attendanceB;User Id=admin;Password=admin;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="ApiHandler" path="api/*" verb="*"/>
-      <add name="ChartImg" verb="*" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-      <add name="CrystalImageHandler.aspx_GET" verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" preCondition="integratedMode"/>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
-      <remove name="OPTIONSVerbHandler"/>
-      <remove name="TRACEVerbHandler"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
-    </handlers>
+      <add name="ApiHandler" path="api/*" verb="*" />
+      <add name="ChartImg" verb="*" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add name="CrystalImageHandler.aspx_GET" verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" preCondition="integratedMode" />
+      
+      
+      
+      
+    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
     <security>
       <requestFiltering>
         <verbs>
-          <add verb="PUT" allowed="true"/>
-          <add verb="HttpPut" allowed="true"/>
+          <add verb="PUT" allowed="true" />
+          <add verb="HttpPut" allowed="true" />
         </verbs>
       </requestFiltering>
     </security>
@@ -87,8 +87,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
